[package]
name = "rreq"
version = "0.1.0"
edition = "2021"
authors = ["Josh Jeppson <joshua.jeppson17@gmail.com>"]
description = "Reasonable Realtime Audio Equalizer for JACK"
license = "GPLv3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.11.4"
imgui = "0.10.0"
rustfft = "6.1.0"
